--- a/promotool/package.json
+++ b/promotool/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^3.0.10"
+    "electron": "^3.0.10",
+    "sprintf-js": "^1.1.1"
   }
 }
